# RetroWaveMIDIProxy

./: .gitignore  CMakeLists.txt
banks/: CMakeLists.txt  export_banks.cpp
cli/: CMakeLists.txt  daemon.cpp  daemon.h  main.cpp
core/: CMakeLists.txt
core/include/retrowave/: direct_mode.h  midi_router.h  opl3_hw.h  opl3_registers.h  opl3_state.h  protocol.h  serial_port.h  serial_posix.h  voice_allocator.h
core/src/: direct_mode.cpp  midi_router.cpp  opl3_hw.cpp  opl3_registers.cpp  opl3_state.cpp  protocol.cpp  serial_posix.cpp  voice_allocator.cpp
docs/: MIDI-PROTOCOL.md
gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
panel/: CMakeLists.txt  copy_banks.cmake.in  fm_diagram_widget.cpp  fm_diagram_widget.h  main.cpp  panelwindow.cpp  panelwindow.h  serial_qt.cpp  serial_qt.h
systemd/: retrowave-midi.service
